<resources>
    <string name="app_name">Juego</string>
    <string name="btnAvetura">Aventura</string>
    <string name="btnMultijugador">Multijugador</string>
    <string name="btnSalir">Salir</string>
    <string name="txtJuego">Juego</string>
    <string name="btnTerminarTurno">Terminar Turno</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="btnAtras1">Atras</string>
//pantalla configuracion
    <string name="txtsonido">Activar y Desactivar Audio</string>
    <string name="Configuracion">Configuracion</string>
    <string name="txtvolumen">Subir y Bajar Volumen</string>
    //pantalla 2
    <string name="txtMenuseleccion">Menu principal</string>
    <string name="btnonline">ORDENADOR</string>
    <string name="btnvspersonas">P VS P</string>
    <string name="btnAtras">ATRAS</string>
    //mundo 1
    <string name="txtTituloEgipto">Antiguo Egipto</string>

</resources>